# mwget

./: .gitignore  AUTHORS  BUGS  CMakeLists.txt  Cargo.toml  ChangeLog  Fuzzy  Makefile  Makefile.am  Makefile.in  README  README.md  aclocal.m4  autogen.sh  config.h.in  configure  configure.in  mkinstalldirs
.github/workflows/: ci.yml
.pc/: applied-patches
.pc/debian-changes-0.1.0-kmbuild8/: configure
.pc/debian-changes-0.1.0-kmbuild8/src/: downloader.cpp  i18n.h  mwget.cpp
config/: config.h.in
mach-info/: Makefile  README
po/: LINGUAS  POTFILES.in  zh_CN.po
src/: CMakeLists.txt  Makefile.am  Makefile.in  advio.cpp  advio.h  block.cpp  block.h  cli.rs  config.rs  debug.cpp  debug.h  downloader.cpp  downloader.h  downloader.rs  error.rs  formatter.rs  ftp.cpp  ftp.h  ftpparser.cpp  ftpparser.h  ftpplugin.cpp  ftpplugin.h  header.cpp  header.h  http.cpp  http.h  http.rs  httpplugin.cpp  httpplugin.h  i18n.h  initi18n.h  lib.rs  macro.h  main.rs  mwget.cpp  mwget.h  plugin.cpp  plugin.h  progress.rs  progressbar.cpp  (+12 more)
