[package]
name = "mwget"
version = "1.0.0"
edition = "2024"
description = "A multi-threaded wget implementation in Rust"
license = "LGPL-3.0-only"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["stream", "rustls-tls"], default-features = false }
clap = { version = "4.4", features = ["derive"] }
url = "2.5"
thiserror = "1.0"
futures = "0.3"
chrono = "0.4"
crossterm = "0.27"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
