AUX_SOURCE_DIRECTORY(. SRC_LIST)

ADD_EXECUTABLE(mwget ${SRC_LIST})

TARGET_LINK_LIBRARIES(mwget pthread)

INSTALL(TARGETS mwget
	RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
	)

set(HAVE_SSL 0)
set(PACKAGE_VERSION "0.2.0")

EXECUTE_PROCESS(OUTPUT_VARIABLE BUILT_TIME
    OUTPUT_STRIP_TRAILING_WHITESPACE
    COMMAND date
    )
set(BUILT_TIME "${BUILT_TIME}")

EXECUTE_PROCESS(OUTPUT_VARIABLE CC_VERSION
    OUTPUT_STRIP_TRAILING_WHITESPACE
    COMMAND cc --version
    COMMAND grep cc
    )
set(CC_VERSION "${CC_VERSION}")

EXECUTE_PROCESS(OUTPUT_VARIABLE CXX_VERSION
    OUTPUT_STRIP_TRAILING_WHITESPACE
    COMMAND c++ --version
    COMMAND grep c++
    )
set(CXX_VERSION "${CXX_VERSION}")

EXECUTE_PROCESS(OUTPUT_VARIABLE SYSTEM_TYPE
    OUTPUT_STRIP_TRAILING_WHITESPACE
    COMMAND uname -o -m
    )
set(SYSTEM_TYPE "${SYSTEM_TYPE}")

CONFIGURE_FILE(
    "${PROJECT_SOURCE_DIR}/config/config.h.in"
    "${PROJECT_SOURCE_DIR}/config/config.h"
    )

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/config)

