AUX_SOURCE_DIRECTORY(. SRC_LIST)

ADD_EXECUTABLE(mwget ${SRC_LIST})

SET(PACKAGE_VERSION "0.2.0")

string(TIMESTAMP BUILT_TIME UTC)

SET(CC_VERSION "${CMAKE_C_COMPILER_ID} ${CMAKE_C_COMPILER_VERSION}")

SET(CXX_VERSION "${CMAKE_CXX_COMPILER_ID} ${CMAKE_CXX_COMPILER_VERSION}")

SET(SYSTEM_TYPE "${CMAKE_HOST_SYSTEM_NAME} ${CMAKE_HOST_SYSTEM_PROCESSOR}")

SET(deplibs ${deplibs} pthread)

FIND_LIBRARY(deplib ssl)
IF(${deplib} STREQUAL "deplib-NOTFOUND")
    SET(HAVE_SSL 0)
    MESSAGE(STATUS "Checking for ssl... no")
ELSE()
    SET(HAVE_SSL 1)
    SET(deplibs ${deplibs} ssl)
    MESSAGE(STATUS "Checking for ssl... yes, found in ${deplib}")
ENDIF()

CONFIGURE_FILE(
    "${PROJECT_SOURCE_DIR}/config/config.h.in"
    "${PROJECT_SOURCE_DIR}/config/config.h"
    )

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/config)

TARGET_LINK_LIBRARIES(mwget ${deplibs})

INSTALL(TARGETS mwget
    RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin
    )
